# CppTest

./: .gitignore  CMakeLists.txt  README.md  base.cpp  base.h  father.cpp  father.h  main.cpp  son.cpp  son.h
include/: father.h  son.h  testwindow.h
src/: father.cpp  main.cpp  son.cpp  testwindow.cpp
